Fixing Horizontal Overflow & Adding About Section
Changes:
- Changed width on body, footer, & navbar to 100% instead of 100vh
- Added About Us Section
- Changed hero "div" to "Section"

--- a/Assets/CSS/Index.css
+++ b/Assets/CSS/Index.css
@@ -13,7 +13,8 @@
 /*//////////////////////////////////////////////////////////////////////*/
 
 body{
-    width: 100vw;
+    width: 100%;
+    /* overflow-x: hidden; */
     margin: 0;
     padding: 0;
     background-color: var(--p-bg-color);
@@ -26,22 +27,35 @@ body{
 }
 
 footer{
-    width: 100vw;
+    width: 100%;
     height: 6rem;
     background-color: var(--s-bg-color);
 }
+
+section{
+    width: 70vw;
+    display: flex;
+    flex: 1;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
 /*//////////////////////////////////////////////////////////////////////*/
 /*/////////////////////////////// Class ///////////////////////////////*/
 /*////////////////////////////////////////////////////////////////////*/
 .navbar{
     color: var(--p-fn-color);
-    width: 100vw;
+    width: 100%;
     height: 3rem;
+    /* padding: 0 1rem 0 1rem; */
     background-color: var(--s-bg-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
+.navbar div{margin: 1rem;}
+
 .carousel{
     margin: 2rem;
     width: 854px;
@@ -49,14 +63,7 @@ footer{
     background-color: var(--extra);
     border-radius: 1rem;
 }
-.category{
-    width: 70vw;
-    display: flex;
-    flex-direction: row;
-    flex: 1;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
+
 .item-category{
     width: 240px;
     height: 240px;
@@ -64,6 +71,13 @@ footer{
     margin: 2rem;
     border-radius: 1rem;
 }
+
+.about-us{flex-direction: column;}
+.profile{
+    display: flex;
+    flex-direction: row;
+}
+
 /*///////////////////////////////////////////////////////////////////*/
 /*/////////////////////////////// ID ///////////////////////////////*/
 /*/////////////////////////////////////////////////////////////////*/
